tests/feat/4.d
var f := func (x) is print x * 2; end

f(8, 9) // error
